# drf-openapi-schema

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  index.html  mkdocs.yml  noxfile.py  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
openapi_schema/: __init__.py  generator.py  schema.py  serializers.py  typing.py  utils.py  views.py
search/: search_index.json
tests/: conftest.py  test_schema.py
tests/django/: settings.py  urls.py
tests/project/: settings.py
