[project]
name = "drf-openapi-schema"
version = "0.0.3"
description = "Django Rest Framework OpenAPI Schema generation."
authors = [
    { name = "Matti Lamppu", email = "lamppu.matti.akseli@gmail.com" },
]
license = "MIT"
readme = "README.md"
homepage = "https://mrthearman.github.io/drf-openapi-schema"
repository = "https://github.com/MrThearMan/drf-openapi-schema"
keywords = [
    "drf",
    "django",
    "rest_framework",
    "rest",
    "framework",
    "openapi",
    "schema",
    "generator",
]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
requires-python = ">=3.11,<4"
dynamic = [
    "dependencies",
]

[tool.poetry]
requires-poetry = ">=2.0.0"
packages = [
    { include = "openapi_schema" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
Django = ">=5.0"
djangorestframework = ">=3.12.0"
drf-serializer-inference = ">=0.0.2"
PyYAML = ">=6.0"
typing-extensions = {version = ">=4.7.1", python = "<3.11"}
pydantic = {version = ">=2.0.3", optional = true}
uritemplate = {version = ">=4.1.1", optional = true}
inflection = ">=0.5.1"

[tool.poetry.group.test.dependencies]
pytest = "9.0.1"
coverage = "7.12.0"
pytest-django = "4.11.1"
nox = "2025.11.12"
drf-pipeline-views = "0.9.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
pymdown-extensions = "10.17.2"
mkdocs-mermaid2-plugin = "1.2.3"

[tool.poetry.group.lint.dependencies]
pre-commit = "4.5.0"

[tool.poetry.extras]
pydantic = ["pydantic"]
uritemplate = ["uritemplate"]

[tool.ruff]
fix = true
line-length = 120
extend-exclude = [
    "tests/*",
]
lint.typing-modules = [
    "openapi_schema.typing",
]
lint.select = [
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
    "ARG",      # flake8-unused-arguments
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C90",      # mccabe
    "C4",       # flake8-comprehensions
    "COM",      # flake8-commas
    "D200",     # pydocstyle: One-line docstring should fit on one line
    "D201",     # pydocstyle: No blank lines allowed before function docstring (found {num_lines})
    "D202",     # pydocstyle: No blank lines allowed after function docstring (found {num_lines})
    "D209",     # pydocstyle: Multi-line docstring closing quotes should be on a separate line
    "D213",     # pydocstyle: Multi-line docstring summary should start at the second line
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle errors
    "EM",       # flake8-errmsg
    "F",        # pyflakes
    "FBT",      # flake8-boolean-trap
    "I",        # isort
    "INP",      # flake8-no-pep420
    "ISC",      # flake8-implicit-str-concat
    "N",        # pep8-naming
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "PYI",      # flake8-pyi
    "Q",        # flake8-quotes
    "RET",      # flake8-return
    "RSE",      # flake8-raise
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "T20",      # flake8-print
    "TCH",      # flake8-type-checking
    "TRY",      # tryceratops
    "W",        # pycodestyle warnings
]
lint.ignore = [
    "ANN401",   # Any is allowed
    "ARG002",   # Unused method argument
    "S311",     # random-module is OK.
    "FBT001",   # Boolean-typed positional argument in function definition.
    "N815",     # camelCase names
    "RUF012",   # no classvars
    #
    # Conflicting with ruff-format
    #
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D206",     # indent-with-spaces
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "ISC001",   # single-line-implicit-string-concatenation
    "ISC002",   # multi-line-implicit-string-concatenation
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "W191",     # tab-indentation
]

[tool.ruff.per-file-ignores]
"openapi_schema/schema.py" = ["C901"]
"openapi_schema/utils.py" = ["C901"]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
    "docs/*",
    ".venv/*",
    ".tox/*",
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pragma: no cover",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.project.settings"
addopts = "-vv -s --log-cli-level=INFO"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
